[gd_scene load_steps=16 format=3 uid="uid://cbm1j7jao3dxj"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_2w7lu"]
[ext_resource type="PackedScene" uid="uid://d0uw6g2pam7i2" path="res://Scenes/menu.tscn" id="2_epoic"]
[ext_resource type="Texture2D" uid="uid://cy31aam35xted" path="res://assets/tiles.png" id="2_gq1xs"]
[ext_resource type="PackedScene" uid="uid://rcps6afsx0d7" path="res://Scenes/citizen.tscn" id="4_0hwjo"]
[ext_resource type="PackedScene" uid="uid://dbtirouip10qc" path="res://Scenes/hero.tscn" id="6_56e16"]
[ext_resource type="PackedScene" uid="uid://ccer3guxnbr3q" path="res://Scenes/Levels/level2.tscn" id="7_ghjey"]
[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="7_iqfne"]
[ext_resource type="Script" path="res://Scripts/NextLevel.gd" id="8_bp65g"]
[ext_resource type="FontFile" uid="uid://crog0m26lbvaq" path="res://assets/PixelOperator8.ttf" id="9_8p6m1"]
[ext_resource type="Texture2D" uid="uid://cdbmktlwnkl7p" path="res://assets/square.png" id="9_owxsd"]
[ext_resource type="Theme" uid="uid://bsnasectk4s4a" path="res://Themes/level1.tres" id="10_7438k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gcdnj"]
texture = ExtResource("2_gq1xs")
4:1/0 = 0
4:0/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_m8vx7"]
sources/0 = SubResource("TileSetAtlasSource_gcdnj")

[sub_resource type="Animation" id="Animation_opfqf"]
resource_name = "next_level"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Next_level/Animator/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(386.75, -39), Vector2(72, -39)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h7i3r"]
_data = {
"next_level": SubResource("Animation_opfqf")
}

[node name="Main" type="Node2D" node_paths=PackedStringArray("citizens")]
script = ExtResource("1_2w7lu")
level_index = 1
grid_height = 1
citizens = [NodePath("Citizen")]
menu_scene = ExtResource("2_epoic")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(80, -16)
tile_set = SubResource("TileSet_m8vx7")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 262144, 1, 65533, 262144, 1, 1, 262144, 1, 65532, 262144, 0, 65534, 262144, 0, 2, 262144, 0, 0, 262144, 0, 65531, 262144, 1, 3, 262144, 1, -196616, 262144, 0, -196615, 262144, 0, -262139, 262144, 0, -262138, 262144, 0, -196602, 262144, 0, -196603, 262144, 0, -131067, 262144, 0, -131066, 262144, 0, -65530, 262144, 0, 6, 262144, 0, 65542, 262144, 0, 131078, 262144, 0, 196614, 262144, 0, 262150, 262144, 0, 262149, 262144, 0, 4, 65536, 1, -65531, 262144, 0, 5, 262144, 0, 65541, 262144, 0, 131077, 262144, 0, 196613, 262144, 0, 327673, 262144, 0, 327672, 262144, 0, 196600, 262144, 0, 131064, 262144, 0, 65528, 262144, 0, -8, 262144, 0, -65544, 262144, 0, -131080, 262144, 0, -131079, 262144, 0, -65543, 262144, 0, 65529, 262144, 0, 131065, 262144, 0, 196601, 262144, 0, 262137, 262144, 0, 65530, 196608, 1, -7, 262144, 0, 262136, 262144, 0, 327674, 262144, 0, 327675, 262144, 0, 327676, 262144, 0, 327677, 262144, 0, 327678, 262144, 0, 327679, 262144, 0, 262144, 262144, 0, 262145, 262144, 0, 262146, 262144, 0, 262147, 262144, 0, 262148, 262144, 0, -196614, 262144, 0, -196613, 262144, 0, -196612, 262144, 0, -196611, 262144, 0, -196610, 262144, 0, -196609, 262144, 0, -262144, 262144, 0, -262143, 262144, 0, -262142, 262144, 0, -262141, 262144, 0, -262140, 262144, 0, -6, 0, 0, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 131072, 0, 131066, 65536, 0, 131067, 131072, 1, 131068, 131072, 1, 131069, 131072, 1, 131070, 131072, 1, 131071, 131072, 1, 65536, 131072, 1, 65537, 131072, 1, 65538, 131072, 1, 65539, 131072, 1, 65540, 196608, 0, -131078, 262144, 0, -65542, 262144, 0, -65541, 262144, 0, -131077, 262144, 0, -131076, 262144, 0, -131075, 262144, 0, -65539, 262144, 0, -65538, 262144, 0, -65537, 262144, 0, -65540, 262144, 0, -131072, 262144, 0, -131071, 262144, 0, -131070, 262144, 0, -131069, 262144, 0, -131068, 262144, 0, -196604, 262144, 0, -196605, 262144, 0, -196606, 262144, 0, -196607, 262144, 0, -196608, 262144, 0, -131073, 262144, 0, -131074, 262144, 0, 196602, 262144, 0, 196603, 262144, 0, 196604, 262144, 0, 196605, 262144, 0, 262142, 262144, 0, 262143, 262144, 0, 196608, 262144, 0, 196609, 262144, 0, 196610, 262144, 0, 196611, 262144, 0, 131075, 262144, 0, 131076, 262144, 0, 196612, 262144, 0, 196607, 262144, 0, 196606, 262144, 0, 262140, 262144, 0, 262139, 262144, 0, 262138, 262144, 0, 262141, 262144, 0, 131072, 262144, 0, 131073, 262144, 0, 131074, 262144, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(72, -10)
zoom = Vector2(5, 5)

[node name="Citizen" parent="." instance=ExtResource("4_0hwjo")]
position = Vector2(128, 0)

[node name="Hero" parent="." instance=ExtResource("6_56e16")]

[node name="GameOver" type="Node2D" parent="."]
script = ExtResource("7_iqfne")

[node name="Timer" type="Timer" parent="GameOver"]
one_shot = true

[node name="Next_level" type="Node2D" parent="."]
script = ExtResource("8_bp65g")
next_scene = ExtResource("7_ghjey")

[node name="Animator" type="AnimationPlayer" parent="Next_level"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_h7i3r")
}

[node name="Sprite2D" type="Sprite2D" parent="Next_level/Animator"]
modulate = Color(0, 0, 0, 1)
position = Vector2(386.75, -5.375)
scale = Vector2(24.4063, 13.0469)
texture = ExtResource("9_owxsd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -33.0
offset_top = -71.0
offset_right = 5.0
offset_bottom = -55.0
theme = ExtResource("10_7438k")
theme_override_fonts/font = ExtResource("9_8p6m1")
theme_override_font_sizes/font_size = 8
text = "Menu"

[node name="level_info" type="Label" parent="Control"]
layout_mode = 0
offset_left = 129.0
offset_top = -67.0
offset_right = 174.0
offset_bottom = -44.0
theme_override_fonts/font = ExtResource("9_8p6m1")
theme_override_font_sizes/font_size = 8
text = "Level:1"

[connection signal="timeout" from="GameOver/Timer" to="GameOver" method="_on_timer_timeout"]
[connection signal="animation_finished" from="Next_level/Animator" to="Next_level" method="_on_animator_animation_finished"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
